新加了好多，完成了后台，前台部分完成展示以及注册页面

--- a/web/thefore/index/categoryAndcarousel.html
+++ b/web/thefore/index/categoryAndcarousel.html
@@ -125,6 +125,7 @@
 </head>
 <body>
 <div style="height: 50px;"></div>
+<!--猫耳朵-->
 <img class="catear" id="catear" src="http://how2j.cn/tmall/img/site/catear.png" style="left: 260.5px; top: 159.65px; display: none;">
 <div class="categoryWithCarousel">
     <div class="headbar">
@@ -241,6 +242,7 @@
             </div>
         </div>
     </div>
+
     <div style="position: relative;left: 0;top: 0;">
         <div class="productsAsideCategorys" cid="83" style="display: none;">
             <div class="row ">
