--- a/web/thefore/public/simplesearch.html
+++ b/web/thefore/public/simplesearch.html
@@ -19,7 +19,7 @@
             text-decoration: none;
             color: #C40000;
         }
-        div.simpleSeachDiv{
+        div.simpleSearchDiv{
             background-color: #C40000;
             width: 300px;
             margin: 10px 20px 40px;
@@ -66,7 +66,7 @@
     <a href="#nowhere">
         <img src="http://how2j.cn/tmall/img/site/simpleLogo.png" class="simplelogo" id="simplelogo" />
     </a>
-    <div class="simpleSeachDiv pull-right">
+    <div class="simpleSearchDiv pull-right">
         <input type="text" placeholder="平衡车 原汁机" name="keyword"/>
         <button type="submit" class="searchButton">搜天猫</button>
         <div class="searchBelow">
