--- a/web/thefore/public/top.html
+++ b/web/thefore/public/top.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>public</title>
+    <title>top</title>
 
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 
